--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.44.5",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
