--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ai-sdk/google": "^2.0.28",
     "@ai-sdk/openai": "^2.0.64",
     "@hookform/resolvers": "^5.2.2",
+    "@polar-sh/better-auth": "^1.3.0",
+    "@polar-sh/sdk": "^0.40.3",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
